--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+<title>Home</title>
+<meta charset="utf-8">
+<style></style>
+</head>
+<body>
+<nav>
+    Home Application Guide Meet With Us Tracker Tool
+</nav>>
+</body>
+</html>
