--- a/index.html
+++ b/index.html
@@ -3,7 +3,18 @@
 <head>
 <title>Home</title>
 <meta charset="utf-8">
-<style></style>
+<style>
+    	footer {
+		display: flex;
+		justify-content: center;
+		position: relative;        
+	}
+
+	.left-align {
+		position: absolute;
+		left: 0;
+	}
+</style>
 </head>
 <body>
 <nav>
@@ -11,3 +22,8 @@
 </nav>>
 </body>
 </html>
+
+<footer>
+    <small class="left-align"><i>Copyright &copy; Apptrack College Solutions</i></small>
+    <small><i><a href="">apptrackcollegesolutions.net</a></i></small>
+</footer>
