Revamp homepage layout and styling
Updated the HTML structure and styles for the homepage, including a new header, navigation, and sections for services and testimonials.

--- a/index.html
+++ b/index.html
@@ -1,44 +1,98 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>Home</title>
-<meta charset="utf-8">
-<style>
-    	footer {
-		display: flex;
-		justify-content: center;
-		position: relative;        
-	}
-
-	.left-align {
-		position: absolute;
-		left: 0;
-	}
-	
-	.column {
-		float: left;
-		width: 50%
-	}
-	
-	.row:after {
-		content: "";
-		display: table;
-		clear: both;
-	}
-</style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Homepage</title>
+  <style>
+    body {
+      font-family: 'Times New Roman', Times, serif, sans-serif;
+      margin: 0;
+      line-height: 1.6;
+    }
+    header {
+      background: #e76831;
+      color: #f7f4f3;
+      padding: 1rem;
+      text-align: center;
+    }
+    nav ul {
+      list-style: none;
+      padding: 0;
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+    }
+    nav a {
+      color: #f8f6f5;
+      text-decoration: none;
+    }
+    section {
+      padding: 2rem;
+    }
+    .services {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+      gap: 1rem;
+    }
+    .service {
+      background: #e76831;
+      padding: 1rem;
+      border-radius: 5px;
+    }
+    .testimonials {
+      background: #e76831;
+      padding: 2rem;
+      border-radius: 5px;
+    }
+    .testimonial {
+      margin-bottom: 1rem;
+      font-style: italic;
+    }
+  </style>
 </head>
 <body>
-	<div class="row">
-		<div class="column">HI</div>
-		<div class="column">HI</div>
-	</div>
-<nav>
-    Home Application Guide Meet With Us Tracker Tool
-</nav>>
+
+  
+  <header>
+    <h1>-The App Track Website-<h1>
+    <nav>
+      <ul>
+        <li><a href="#homepage">Homepage</a></li>
+      </ul>
+    </nav>
+  </header>
+
+>
+  <section id="services">
+    <h2>Tabs</h2>
+    <div class="services">
+      <div class="service">
+        <h3>Home Header</h3>
+        <p>This is how you type in the boxes -Sam</p>
+      </div>
+      <div class="service">
+        <h3>Services</h3>
+      </div>
+      <div class="service">
+        <h3>Help</h3>
+      </div>
+    </div>
+  </section>
+		
+  <section id="testimonials">
+    <h2>Testimonials</h2>
+    <div class="testimonials">
+      <div class="testimonial">
+        "The App Track Webstie made it easy to find the perfect workout for my needs!" - Kenm Mayer
+      </div>
+      <div class="testimonial">
+        "I love the variety on this website for App Track." - Susan Hammond
+      </div>
+      <div class="testimonial">
+        "The user interface is so user-friendly." - Chris Simmons
+      </div>
+    </div>
+
 </body>
 </html>
-
-<footer>
-    <small class="left-align"><i>Copyright &copy; Apptrack College Solutions</i></small>
-    <small><i><a href="">apptrackcollegesolutions.net</a></i></small>
-</footer>
