Create initial app-guide.html structure and styles

--- a/app-guide.html
+++ b/app-guide.html
@@ -1,1 +1,86 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>App Guide</title>
+  <style>
+    body {
+      font-family: 'Times New Roman', Times, serif, sans-serif;
+      margin: 0;
+      padding: 0;
+      background: #f9f9f9;
+      color: #333;
+    }
+
+    header {
+      background : #e76831;
+      color: white;
+      padding: 20px;
+      text-align: center;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 2rem;
+    }
+
+    main {
+      max-width: 800px;
+      margin: 30px auto;
+      padding: 20px;
+      background: white;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+    }
+
+    section {
+      margin-bottom: 30px;
+    }
+
+    h2 {
+      color: #e76831;
+      margin-bottom: 10px;
+    }
+
+    ol {
+      padding-left: 20px;
+    }
+
+    li {
+      margin-bottom: 15px;
+    }
+
+    .step-title {
+      font-weight: bold;
+      margin-bottom: 5px;
+    }
+
+    .step-explanation {
+      margin-left: 10px;
+      color: #555;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1>📘 Application Guide</h1>
+    <p>This Page Will Give You The Right Steps ;)</p>
+  </header>
+
+<main>
+    <section>
+      <h2>Steps to Use the Application</h2>
+      <ol>
+        <li>
+          <div class="step-title">Step 1: Sign Up</div>
+          <div class="step-explanation">Create an account or smth.</div>
+        </li>
+      </ol>
+    </section>
+  </main>
+</body>
+</html>
+
+
 
