--- a/index.html
+++ b/index.html
@@ -3,33 +3,62 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Homepage</title>
+  <title>Home</title>
   <style>
     body {
       font-family: 'Times New Roman', Times, serif, sans-serif;
       margin: 0;
-      line-height: 1.6;
+      line-height: 1.4;
     }
+
     header {
       background: #e76831;
       color: #f7f4f3;
-      padding: 1rem;
+      padding: 0.4rem;
       text-align: center;
+      font-size: large;
     }
+  
+    .title {
+        color: black;
+        font-style: bold;
+        text-align: center;
+    }
+
+    nav  {
+        padding: 2rem;
+    }
+
     nav ul {
       list-style: none;
       padding: 0;
       display: flex;
       justify-content: center;
-      gap: 1rem;
+      gap: 0.5rem;
     }
-    nav a {
+
+    a {
       color: #f8f6f5;
       text-decoration: none;
     }
+
     section {
       padding: 2rem;
     }
+
+    .navigation {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+      gap: 0.75em;
+    }
+    
+    .box {
+      background: #b65f3a;
+      padding: 0.5rem 0.25;
+      border-radius: 5px;
+      font-size: .5em
+    }
+
     .services {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
@@ -40,6 +69,7 @@
       padding: 1rem;
       border-radius: 5px;
     }
+
     .testimonials {
       background: #e76831;
       padding: 2rem;
@@ -55,12 +85,27 @@
 
   
   <header>
-    <h1>-The App Track Website-<h1>
+    <a href="index.html"><h1>AppTrack College Solutions<h1></a>
     <nav>
-      <ul>
-        <li><a href="#homepage">Homepage</a></li>
-      </ul>
+    <div class="navigation">
+    <a href="index.html" class="box">
+        <h3>Home</h3>
+      </a>
+      <a href="about-us.html" class="box">
+        <h3>About Us</h3>
+      </a>
+      <a href="app-guide.html" class="box">
+        <h3>Application Guide</h3>
+      </a>
+        <a href="meet-with-us.html" class="box"><h3>Schedule a Meeting</h3>
+      </a>
+      <a href="tracker-tool.html" class="box">
+        <h3>Tracker Tool</h3>
+      </a>
     </nav>
+    <div class="title">
+    Home
+    </div>
   </header>
 
 >
