Working and mostly finalized meet-with-us and about-us pages

--- a/about-us.html
+++ b/about-us.html
@@ -20,7 +20,12 @@
     }
 
     a {
-      color: #f8f6f5;
+      color: #ffffff;
+      text-decoration: none;
+    }
+
+    p a {
+      color: #451653a4;
       text-decoration: none;
     }
 
@@ -36,6 +41,14 @@
         color: black;
         font-style: bold;
         text-align: center;
+    }
+
+    .aboutus {
+      background: #e48314;
+      padding: 2rem;
+      border-radius: 5px;
+      font-weight: bold;
+      font-size: 1.5em;
     }
 
     .navigation {
@@ -61,7 +74,6 @@
 </head>
 <body>
 
-  
   <header>
     <a href="index.html"><h1>AppTrack College Solutions</h1></a>
     <nav>
@@ -85,3 +97,13 @@
     <h1>About Us</h1>
     </div>
   </header>
+
+ <section id="aboutus">
+  <div class="aboutus">
+    <p>AppTrack College Solutions has helped students and parents navigate the College Application Process for over 30 years. 
+      Our team of former admissions officers and consultants understands the ins-and-outs of the college process and has a proven track record of successful outcomes.<br><br>
+    AppTrack was founded with one goal in mind: to make education more accessible to all. Our guides, tools, workshops, and consultations have turned the College Process from
+    a chore to a joy for thousands of families.<br><br>
+    <p style="text-align: center;"> Ready to get on track? Visit our <a href="app-guide.html">Application Guide</a>, <a href="meet-with-us.html">Meeting Schedule</a>, or <a href="tracker-tool.html">Tracker Tool</a> to get started.</p></p>
+  </div>
+  </section>
