Update steps to use the application in app-guide.html

--- a/app-guide.html
+++ b/app-guide.html
@@ -128,18 +128,36 @@
   </header> -->
 
 <main>
-    <section>
-      <h2>Steps to Use the Application</h2>
-      <ol>
-        <li>
-          <div class="step-title">Step 1: Sign Up</div>
-          <div class="step-explanation">Create an account or smth.</div>
-        </li>
-      </ol>
-    </section>
-  </main>
+  <section>
+    <h2>Steps to Use the Application</h2>
+    <ol>
+      <li>
+        <div class="step-title">Step 1: Sign Up</div>
+        <div class="step-explanation">Create an App Track Account through the App Track team (help tab on home page).</div>
+      </li>
+      <li>
+        <div class="step-title">Step 2: Verify Email</div>
+        <div class="step-explanation">Check your inbox and confirm your email address to activate your account.</div>
+      </li>
+      <li>
+        <div class="step-title">Step 3: Log In</div>
+        <div class="step-explanation">Login with your account.</div>
+      </li>
+      <li>
+        <div class="step-title">Step 4: Explore Features</div>
+        <div class="step-explanation">Navigate through menus and try out the core functionalities of the app.</div>
+      </li>
+      <li>
+        <div class="step-title">Step 5: Get Support</div>
+        <div class="step-explanation">If you encounter issues, contact the App Track team. We value "person to person" assistance.</div>
+      </li>
+    </ol>
+  </section>
+</main>
 </body>
 </html>
+
+
 
 
 
