Refactor app-guide.html layout and styles
Refactor CSS styles and update HTML structure for navigation and blog section.

--- a/app-guide.html
+++ b/app-guide.html
@@ -14,23 +14,16 @@
     }
 
     header {
-      background : #e76831;
+      background: #e76831;
       color: white;
       padding: 0.4rem;
-      /* padding: 20px; */
       text-align: center;
       font-size: large;
       line-height: 1.4;
     }
 
-    /* header h1 {
-      margin: 0;
-      font-size: 2rem;
-    }
-     */
-
-    nav  {
-        padding: 2rem;
+    nav {
+      padding: 2rem;
     }
 
     a {
@@ -63,9 +56,9 @@
     }
 
     .title {
-        color: black;
-        font-style: bold;
-        text-align: center;
+      color: black;
+      font-weight: bold;
+      text-align: center;
     }
 
     section {
@@ -77,22 +70,15 @@
       margin-bottom: 10px;
     }
 
-    ol {
-      padding-left: 20px;
+    .blog-post {
+      padding: 15px;
+      line-height: 1.6;
+      color: #444;
     }
 
-    li {
-      margin-bottom: 15px;
-    }
-
-    .step-title {
-      font-weight: bold;
-      margin-bottom: 5px;
-    }
-
-    .step-explanation {
-      margin-left: 10px;
-      color: #555;
+    .blog-post h3 {
+      margin-top: 0;
+      color: #b65f3a;
     }
   </style>
 </head>
@@ -100,63 +86,62 @@
   <header>
     <a href="index.html"><h1>AppTrack College Solutions</h1></a>
     <nav>
-    <div class="navigation">
-    <a href="index.html" class="box">
-        <h1>Home</h1>
-      </a>
-      <a href="about-us.html" class="box">
-        <h1>About Us</h1>
-      </a>
-      <a href="app-guide.html" class="box">
-        <h1>Application Guide</h1>
-      </a>
-        <a href="meet-with-us.html" class="box"><h1>Schedule a Meeting</h1>
-      </a>
-      <a href="tracker-tool.html" class="box">
-        <h1>Tracker Tool</h1>
-      </a>
+      <div class="navigation">
+        <a href="index.html" class="box"><h1>Home</h1></a>
+        <a href="about-us.html" class="box"><h1>About Us</h1></a>
+        <a href="app-guide.html" class="box"><h1>Application Guide</h1></a>
+        <a href="meet-with-us.html" class="box"><h1>Schedule a Meeting</h1></a>
+        <a href="tracker-tool.html" class="box"><h1>Tracker Tool</h1></a>
+        <a href="blog.html" class="box"><h1>Blog</h1></a>
+      </div>
     </nav>
     <div class="title">
-    <h1>Application Guide</h1>
+      <h1>Application Guide</h1>
     </div>
   </header>
-  <!-- 
-  <section id="meeting_info">
-  <header>
-    <h1>📘 Application Guide</h1>
-    <p>This Page Will Give You The Right Steps ;)</p>
-  </header> -->
 
-<main>
-  <section>
-    <h2>Steps to Use the Application</h2>
-    <ol>
-      <li>
-        <div class="step-title">Step 1: Sign Up</div>
-        <div class="step-explanation">Create an App Track Account through the App Track team (help tab on home page).</div>
-      </li>
-      <li>
-        <div class="step-title">Step 2: Verify Email</div>
-        <div class="step-explanation">Check your inbox and confirm your email address to activate your account.</div>
-      </li>
-      <li>
-        <div class="step-title">Step 3: Log In</div>
-        <div class="step-explanation">Login with your account.</div>
-      </li>
-      <li>
-        <div class="step-title">Step 4: Explore Features</div>
-        <div class="step-explanation">Navigate through menus and try out the core functionalities of the app.</div>
-      </li>
-      <li>
-        <div class="step-title">Step 5: Get Support</div>
-        <div class="step-explanation">If you encounter issues, contact the App Track team. We value "person to person" assistance.</div>
-      </li>
-    </ol>
-  </section>
-</main>
+  <main>
+    <section>
+      <h2>Steps to Use the Application</h2>
+      <ol>
+        <li><div class="step-title">Step 1: Sign Up</div><div class="step-explanation">Create an App Track Account through the App Track team (help tab on home page).</div></li>
+        <li><div class="step-title">Step 2: Verify Email</div><div class="step-explanation">Check your inbox and confirm your email address to activate your account.</div></li>
+        <li><div class="step-title">Step 3: Log In</div><div class="step-explanation">Login with your account.</div></li>
+        <li><div class="step-title">Step 4: Explore Features</div><div class="step-explanation">Navigate through menus and try out the core functionalities of the app.</div></li>
+        <li><div class="step-title">Step 5: Get Support</div><div class="step-explanation">If you encounter issues, contact the App Track team. We value "person to person" assistance.</div></li>
+      </ol>
+    </section>
+
+    <!-- One Big Blog Post -->
+    <section>
+      <h2>Blog</h2>
+      <div class="blog-post">
+        <h3>🎓 Navigating College Applications with Confidence</h3>
+        <p>
+          The college application process can feel overwhelming, but with the right tools, it becomes quick and easy. 
+          Organization is the first step: keeping track of deadlines, essays, and recommendation letters ensures you don’t miss 
+          critical opportunities with the colleges of your choice. That’s where AppTrack comes in, it's designed to simplify the journey by giving you a clear runway.
+        </p>
+        <p>
+          Beyond technology, person-to-person support matters. While apps can guide you through tasks, having a team that listens 
+          and understands your the situation that you are going through makes a big difference. At AppTrack, we believe in combining digital efficiency 
+          with human connection, so you never feel alone in the process. Sometimes its just nice to talk to someone who isn’t a robot!
+        </p>
+        <p>
+          Some of the most powerful features we have includes the trackertool and schedualed meetings. These tools 
+          help you stay focused and reduce stress,. This allows you to spend more time on what matters most which is crafting strong applications 
+          that reflect your amazing hardwork and dedication.
+        </p>
+        <p>
+          Remember, applying to college isn’t just about just filling forms. It’s about telling a story, your story. This story highlights your strengths 
+          and show how you’ll contribute to a campus community. With AppTrack, you’ll have both the structure and the support to 
+          make that story great.
+        </p>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
-
 
 
 
