Enhance styles and structure for application guide
Added styles for ordered lists and list items in the application guide. Updated blog section to include a new structure for blog posts.

--- a/app-guide.html
+++ b/app-guide.html
@@ -70,10 +70,29 @@
       margin-bottom: 10px;
     }
 
+    ol {
+      padding-left: 20px;
+    }
+
+    li {
+      margin-bottom: 15px;
+    }
+
+    .step-title {
+      font-weight: bold;
+      margin-bottom: 5px;
+    }
+
+    .step-explanation {
+      margin-left: 10px;
+      color: #555;
+    }
+
     .blog-post {
       padding: 15px;
       line-height: 1.6;
       color: #444;
+      border-top: 2px solid #e76831;
     }
 
     .blog-post h3 {
@@ -92,7 +111,6 @@
         <a href="app-guide.html" class="box"><h1>Application Guide</h1></a>
         <a href="meet-with-us.html" class="box"><h1>Schedule a Meeting</h1></a>
         <a href="tracker-tool.html" class="box"><h1>Tracker Tool</h1></a>
-        <a href="blog.html" class="box"><h1>Blog</h1></a>
       </div>
     </nav>
     <div class="title">
@@ -114,7 +132,8 @@
 
     <section>
       <h2>Blog</h2>
-        <h3>🎓 Navigating College Applications with Confidence</h3>
+      <div class="blog-post">
+         <h3>🎓 Navigating College Applications with Confidence</h3>
         <p>
           The college application process can feel overwhelming, but with the right tools, it becomes quick and easy. 
           Organization is the first step: keeping track of deadlines, essays, and recommendation letters ensures you don’t miss 
@@ -134,11 +153,9 @@
           Remember, applying to college isn’t just about just filling forms. It’s about telling a story, your story. This story highlights your strengths 
           and show how you’ll contribute to a campus community. With AppTrack, you’ll have both the structure and the support to 
           make that story great.
-        </p>
       </div>
     </section>
   </main>
 </body>
 </html>
-
 
