--- a/tracker-tool.html
+++ b/tracker-tool.html
@@ -136,6 +136,8 @@
 	
 		<div class="tool-info">
 			
+			<form method="post" action="https://webdevbasics.net/scripts/demo.php">
+				
 			<label for="status">Current status of application:</label>
 			
 			<select id="status" name="status">
@@ -190,12 +192,14 @@
 			<br>
 			
 			<button type="submit">Submit</button>
-			
+
+		</form>
 		</div>
 
 		<h2> Application Checklist </h2>
 	
 		<div class="app-checklist">
+			<form method="post" action="https://webdevbasics.net/scripts/demo.php">
 		
 			<fieldset>
 		
@@ -217,7 +221,8 @@
 				<button type="submit">Submit</button>
 				
 			</fieldset>
-			
+
+			</form>
 		</div>
 	
 		<h2> Upcoming Deadlines </h2>
