--- a/about-us.html
+++ b/about-us.html
@@ -69,6 +69,18 @@
         text-align: center;
         background-color: #e6ad95;
     }
+
+    .ai-element {
+		position: fixed;
+		bottom: 20px;
+		right: 20px;
+		background-color: black;
+		color: #ad6018;
+		padding: 15px 25px;
+		border: none;
+		border-radius 5px;
+		cursor: pointer;
+	  }
     
   </style>
 </head>
@@ -107,3 +119,5 @@
     <p style="text-align: center;"> Ready to get on track? Visit our <a href="app-guide.html">Application Guide</a>, <a href="meet-with-us.html">Meeting Schedule</a>, or <a href="tracker-tool.html">Tracker Tool</a> to get started.</p></p>
   </div>
   </section>
+
+  <button class="ai-element">Need Assistance?</button>
