Fixed grammar/typos, added small amounts of content, added footers to each page, added "Need Assistance?" button to each page

--- a/about-us.html
+++ b/about-us.html
@@ -78,10 +78,10 @@
 		color: #ad6018;
 		padding: 15px 25px;
 		border: none;
-		border-radius 5px;
+		border-radius: 5px;
 		cursor: pointer;
 	  }
-    
+
   </style>
 </head>
 <body>
@@ -120,4 +120,11 @@
   </div>
   </section>
 
+
   <button class="ai-element">Need Assistance?</button>
+  <footer>
+      <small class="left-align"><i>Copyright &copy; 2025 AppTrack College Solutions</i></small>
+      <small><i><a href="">apptrackcollegesolutions.net</a></i></small>
+  </footer>
+  </body>
+  </html>
