--- a/app-guide.html
+++ b/app-guide.html
@@ -99,6 +99,18 @@
       margin-top: 0;
       color: #b65f3a;
     }
+
+    .ai-element {
+		position: fixed;
+		bottom: 20px;
+		right: 20px;
+		background-color: black;
+		color: #ad6018;
+		padding: 15px 25px;
+		border: none;
+		border-radius: 5px;
+		cursor: pointer;
+	  }
   </style>
 </head>
 <body>
@@ -122,11 +134,11 @@
     <section>
       <h2>Steps to Use the Application</h2>
       <ol>
-        <li><div class="step-title">Step 1: Sign Up</div><div class="step-explanation">Create an App Track Account through the App Track team (help tab on home page).</div></li>
+        <li><div class="step-title">Step 1: Sign Up</div><div class="step-explanation">Create an AppTrack Account through the AppTrack team (help tab on home page).</div></li>
         <li><div class="step-title">Step 2: Verify Email</div><div class="step-explanation">Check your inbox and confirm your email address to activate your account.</div></li>
         <li><div class="step-title">Step 3: Log In</div><div class="step-explanation">Login with your account.</div></li>
         <li><div class="step-title">Step 4: Explore Features</div><div class="step-explanation">Navigate through menus and try out the core functionalities of the app.</div></li>
-        <li><div class="step-title">Step 5: Get Support</div><div class="step-explanation">If you encounter issues, contact the App Track team. We value "person to person" assistance.</div></li>
+        <li><div class="step-title">Step 5: Get Support</div><div class="step-explanation">If you encounter issues, contact the AppTrack team. We value "person-to-person" assistance.</div></li>
       </ol>
     </section>
 
@@ -137,25 +149,32 @@
         <p>
           The college application process can feel overwhelming, but with the right tools, it becomes quick and easy. 
           Organization is the first step: keeping track of deadlines, essays, and recommendation letters ensures you don’t miss 
-          critical opportunities with the colleges of your choice. That’s where AppTrack comes in, it's designed to simplify the journey by giving you a clear runway.
+          critical opportunities with the colleges of your choice. That’s where AppTrack comes in; it's designed to simplify the journey by giving you a clear runway.
         </p>
         <p>
           Beyond technology, person-to-person support matters. While apps can guide you through tasks, having a team that listens 
-          and understands your the situation that you are going through makes a big difference. At AppTrack, we believe in combining digital efficiency 
-          with human connection, so you never feel alone in the process. Sometimes its just nice to talk to someone who isn’t a robot!
+          and understands to the situation that you are going through makes a big difference. At AppTrack, we believe in combining digital efficiency 
+          with human connection, so you never feel alone in the process. Sometimes, it's just nice to talk to someone who isn’t a robot!
         </p>
         <p>
-          Some of the most powerful features we have includes the trackertool and schedualed meetings. These tools 
-          help you stay focused and reduce stress,. This allows you to spend more time on what matters most which is crafting strong applications 
-          that reflect your amazing hardwork and dedication.
+          Some of the most powerful features we have include the Tracker Tool and Webinar Scheduling Page. These tools 
+          help you to stay focused and informed; and reduce your stress. This allows you to spend more time on what matters - crafting strong applications 
+          that reflect your hard work and dedication.
         </p>
         <p>
-          Remember, applying to college isn’t just about just filling forms. It’s about telling a story, your story. This story highlights your strengths 
-          and show how you’ll contribute to a campus community. With AppTrack, you’ll have both the structure and the support to 
-          make that story great.
+          Remember, applying to college isn’t just about just filling out forms. It’s about telling your story. This story highlights your strengths 
+          and shows how you’ll contribute to a campus community. With AppTrack, you’ll have both the structure and the support to 
+          make that story a weapon in your academic arsenal.
+          </p>
       </div>
     </section>
   </main>
+<br>
+<footer>
+      <small class="left-align"><i>Copyright &copy; 2025 AppTrack College Solutions</i></small>
+      <small><i><a href="">apptrackcollegesolutions.net</a></i></small>
+  </footer>
+
+<button class="ai-element">Need Assistance?</button>
 </body>
 </html>
-
