--- a/index.html
+++ b/index.html
@@ -80,6 +80,23 @@
       margin-bottom: 1rem;
       font-style: italic;
     }
+
+    	.ai-element {
+		position: fixed;
+		bottom: 20px;
+		right: 20px;
+		background-color: black;
+		color: #ad6018;
+		padding: 15px 25px;
+		border: none;
+		border-radius: 5px;
+		cursor: pointer;
+	  }
+
+    p a {
+      color: #451653a4;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
@@ -102,31 +119,30 @@
       </a>
       <a href="tracker-tool.html" class="box">
         <h1>Tracker Tool</h1>
-      </a>
+      </a> </div>
     </nav>
     <div class="title">
     <h1>Home</h1>
     </div>
   </header>
 
->
   <section id="services">
     <h2>Tabs</h2>
     <div class="services">
       <div class="service">
         <h3>Hello:</h3>
-        <p>Welcome to the App Track Website!</p>
-        <p>The wait is OVER, we are finally ONLINE.</p>
+        <p>Welcome to the AppTrack College Solutions Website!</p>
+        <p>The wait is OVER, we are finally ONLINE!</p>
       </div>
       <div class="service">
         <h3>Services:</h3>
-        <p>We offer college application and essay services.</p>
-        <P>It is important to us that you are well prepared for the college admissions process</P>
+        <p>We offer college application and essay services, along with webinars, checklists, and deadline trackers!</p>
+        <P>It is important to us that you are well-prepared for the College Admissions Process.</P>
         <p></p>
       </div>
       <div class="service">
         <h3>Help:</h3>
-        <p>Contact the App Track Team at (999)-999-COLLEGE</p>
+        <p>Need help? Contact the AppTrack Team at (999)-999-COLLEGE, sign up for a consultation on our <a href=meet-with-us.html>Meet With Us</a> page, or click "Need Assistance" below.</p>
       </div>
     </div>
   </section>
@@ -135,12 +151,24 @@
     <h2>Testimonials</h2>
     <div class="testimonials">
       <div class="testimonial">
-        "The App Track Website made it easy to fufill my college prep needs!" - Ken Mayer
+        "The AppTrack Website made it easy to fufill my college prep needs!" - Ken Mayer
       </div>
       <div class="testimonial">
-        "I love the variety on this website for App Track." - Susan Hammond
+        "I love the variety and working forms on AppTrack's website." - Susan Hammond
       </div>
       <div class="testimonial">
-        "The user interface is so user-friendly! I feel as though Carlos, Sam, and Zach would deserve an A+ if this website was ever an assignment I made. " - Chris Simmons
+        "The UI is so user-friendly! I feel as though Carlos, Sam, and Zach would deserve an A+ if this website was an assignment of mine." - Chris Simmons
       </div>
     </div>
+</section>
+    <footer>
+	
+      <small class="left-align"><i>Copyright &copy; 2025 AppTrack College Solutions</i></small>
+	  
+      <small><i><a href="">apptrackcollegesolutions.net</a></i></small>
+	  
+	</footer>
+
+  <button class="ai-element">Need Assistance?</button>
+  </body>
+  </html>
