--- a/tracker-tool.html
+++ b/tracker-tool.html
@@ -98,7 +98,7 @@
 		color: #ad6018;
 		padding: 15px 25px;
 		border: none;
-		border-radius 5px;
+		border-radius: 5px;
 		cursor: pointer;
 	}
 	
@@ -253,10 +253,12 @@
 
 	<footer>
 	
-      <small class="left-align"><i>Copyright &copy; Apptrack College Solutions</i></small>
+      <small class="left-align"><i>Copyright &copy; 2025 AppTrack College Solutions</i></small>
 	  
       <small><i><a href="">apptrackcollegesolutions.net</a></i></small>
 	  
 	</footer>
 	
 	<button class="ai-element">Need Assistance?</button>
+	</body>
+	</html>
