--- a/meet-with-us.html
+++ b/meet-with-us.html
@@ -90,6 +90,19 @@
       margin-bottom: 1rem;
       font-style: italic;
     }
+
+    	.ai-element {
+		position: fixed;
+		bottom: 20px;
+		right: 20px;
+		background-color: black;
+		color: #ad6018;
+		padding: 15px 25px;
+		border: none;
+		border-radius: 5px;
+		cursor: pointer;
+	}
+
   </style>
 </head>
 <body>
@@ -177,9 +190,10 @@
         </form></div></div>
     </div>
       </section>
+<button class="ai-element">Need Assistance?</button>
 
   <footer>
-      <small class="left-align"><i>Copyright &copy; Apptrack College Solutions</i></small>
+      <small class="left-align"><i>Copyright &copy; 2025 AppTrack College Solutions</i></small>
       <small><i><a href="">apptrackcollegesolutions.net</a></i></small>
   </footer>
 </body>
